Add basic HTML markup, styling, sizing

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Digit Recognizer</title>
     <link href="styles.css" rel="stylesheet" />
 
-    <!-- <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" /> -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -30,6 +30,11 @@
     <script src="javascript.js"></script>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <h1>How to use this thing</h1>
+    <p>Draw a digit with your mouse or finger. Then, press Guess to find out which digit the machine learning model thinks you drew. Press Clear to wipe the canvas clean.</p>
+    <h2>Answer: waiting for your drawing</h2>
+    <canvas width="300" height="300">A canvas onto which digits are to be drawn.</canvas>
+    <button>Clear</button>
+    <button>Guess</button>
   </body>
 </html>
