Add canvas clearing

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <h1>How to use this thing</h1>
     <p>Draw a digit with your mouse or finger. Then, press Guess to find out which digit the machine learning model thinks you drew. Press Clear to wipe the canvas clean.</p>
     <h2>Answer: waiting for your drawing</h2>
-    <button>Clear</button>
+    <button id="button-clear">Clear</button>
     <button>Guess</button>
   </body>
 </html>
