Export canvas as an image

--- a/index.html
+++ b/index.html
@@ -36,5 +36,6 @@
     <h2>Answer: waiting for your drawing</h2>
     <button id="button-clear">Clear</button>
     <button>Guess</button>
+    <button id="button-save">Save</button>
   </body>
 </html>
