Investigate ONNX.js

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Digit Recognizer" />
     <meta property="twitter:card" content="summary_large_image" />
+    <script src="https://cdn.jsdelivr.net/npm/onnxjs/dist/onnx.min.js"></script>
     <script src="javascript.js"></script>
   </head>
   <body>
