Add touch drawing

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="utf-8" />
-    <title>Digit Recognizer</title>
+    <title>🔢 Digit Recognizer</title>
     <link href="./styles.css" rel="stylesheet" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
@@ -31,14 +31,14 @@
     <script src="./javascript.js"></script>
   </head>
   <body>
-    <canvas id="input-canvas" width="300" height="300">A canvas onto which digits are to be drawn.</canvas>
     <!-- <canvas id="input-canvas-centercrop" style="display: block;"></canvas> -->
-    <canvas id="input-canvas-scaled" width="28" height="28" style="display: none;"></canvas>
     <h1>How to use this thing</h1>
     <p>Draw a digit with your mouse or finger. Then, press Guess to find out which digit the machine learning model thinks you drew. Press Clear to wipe the canvas clean.</p>
     <h2>Answer: <span id="answer-text"></span></h2>
+    <canvas id="input-canvas" width="300" height="300">A canvas onto which digits are to be drawn.</canvas>
     <button id="button-clear">Clear</button>
     <button id="button-guess">Guess</button>
     <button id="button-save">Save</button>
+    <canvas id="input-canvas-scaled" width="28" height="28" style="display: none;"></canvas>
   </body>
 </html>
