Run model inference continuously

--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
     <h2>Answer: <span id="answer-text"></span></h2>
     <canvas id="input-canvas" width="300" height="300">A canvas onto which digits are to be drawn.</canvas>
     <button id="button-clear">Clear</button>
-    <button id="button-guess">Guess</button>
-    <button id="button-save">Save</button>
+    <!-- <button id="button-save">Save</button> -->
     <canvas id="input-canvas-scaled" width="28" height="28" style="display: none;"></canvas>
   </body>
 </html>
