--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <title>🔢 Digit Recognizer</title>
+    <link
+      rel="preload"
+      href="./fonts/graymalkincond.otf"
+      as="font"
+      type="font/otf"
+      crossorigin
+    />
     <link href="./styles.css" rel="stylesheet" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
@@ -32,11 +39,11 @@
   </head>
   <body>
     <!-- <canvas id="input-canvas-centercrop" style="display: block;"></canvas> -->
-    <h1>How to use this thing</h1>
-    <p>Draw a digit with your mouse or finger. Then, press Guess to find out which digit the machine learning model thinks you drew. Press Clear to wipe the canvas clean.</p>
-    <h2>Answer: <span id="answer-text"></span></h2>
+    <h1>Digit Recognizer</h1>
+    <!-- <p>Draw a digit with your mouse or finger. Then, press Guess to find out which digit the machine learning model thinks you drew. Press Clear to wipe the canvas clean.</p> -->
+    <h2>Prediction: <span id="answer-text"></span></h2>
     <canvas id="input-canvas" width="300" height="300">A canvas onto which digits are to be drawn.</canvas>
-    <button id="button-clear">Clear</button>
+    <button id="button-clear">Trash it</button>
     <!-- <button id="button-save">Save</button> -->
     <canvas id="input-canvas-scaled" width="28" height="28" style="display: none;"></canvas>
   </body>
