--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="utf-8" />
-    <title>🔢 Digit Recognizer</title>
+    <title>Digit Recognizer</title>
     <link
       rel="preload"
       href="./fonts/graymalkincond.otf"
@@ -40,11 +40,19 @@
   <body>
     <main>
       <div class="main-content">
-        <!-- <canvas id="input-canvas-centercrop" style="display: block;"></canvas> -->
         <h1>Digit Recognizer</h1>
-        <!-- <p>Draw a digit with your mouse or finger. Then, press Guess to find out which digit the machine learning model thinks you drew. Press Clear to wipe the canvas clean.</p> -->
-        <h2>Prediction:</h2>
-        <div id="answer-text">🤔</div>
+        <ul class="bars-container">
+          <li class="bar"><div class="bar__rect-container"><div class="bar__rect-fill" data-id="0"></div></div><div class="bar__label">0</div></li>
+          <li class="bar"><div class="bar__rect-container"><div class="bar__rect-fill" data-id="1"></div></div><div class="bar__label">1</div></li>
+          <li class="bar"><div class="bar__rect-container"><div class="bar__rect-fill" data-id="2"></div></div><div class="bar__label">2</div></li>
+          <li class="bar"><div class="bar__rect-container"><div class="bar__rect-fill" data-id="3"></div></div><div class="bar__label">3</div></li>
+          <li class="bar"><div class="bar__rect-container"><div class="bar__rect-fill" data-id="4"></div></div><div class="bar__label">4</div></li>
+          <li class="bar"><div class="bar__rect-container"><div class="bar__rect-fill" data-id="5"></div></div><div class="bar__label">5</div></li>
+          <li class="bar"><div class="bar__rect-container"><div class="bar__rect-fill" data-id="6"></div></div><div class="bar__label">6</div></li>
+          <li class="bar"><div class="bar__rect-container"><div class="bar__rect-fill" data-id="7"></div></div><div class="bar__label">7</div></li>
+          <li class="bar"><div class="bar__rect-container"><div class="bar__rect-fill" data-id="8"></div></div><div class="bar__label">8</div></li>
+          <li class="bar"><div class="bar__rect-container"><div class="bar__rect-fill" data-id="9"></div></div><div class="bar__label">9</div></li>
+        </ul>
         <canvas id="input-canvas" width="280" height="280">A canvas onto which digits are to be drawn.</canvas>
         <div
         id="button-clear"
@@ -55,7 +63,6 @@
                   >Trash it</span
                 >
               </div>
-        <!-- <button id="button-save">Save</button> -->
         <canvas id="input-canvas-scaled" width="28" height="28" style="display: none;"></canvas>
       </div>
     </main>
